# Face-Recognition-System-Based-on-OpenCV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  environment.md
opencv5-deps/install/: OpenCVConfig.cmake  setup_vars_opencv5.cmd
opencv5-deps/install/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv5-deps/install/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: FaceDetector.cpp  FaceDetector.h  FaceRepository.cpp  FaceRepository.h  FeatureExtractor.cpp  FeatureExtractor.h  MainWindow.cpp  MainWindow.h  RecognitionService.cpp  RecognitionService.h  RegisterDialog.cpp  RegisterDialog.h  main.cpp
src/config/: AppConfig.cpp  AppConfig.h
src/service/: CameraRecognitionResult.h  RecognitionService.cpp  RecognitionService.h
src/storage/: FaceRepository.cpp  FaceRepository.h
src/ui/: MainWindow.cpp  MainWindow.h  PersonManagementDialog.cpp  PersonManagementDialog.h  RegisterDialog.cpp  RegisterDialog.h
src/utils/: ImageUtils.cpp  ImageUtils.h
src/vision/: FaceDetection.h  FaceDetector.cpp  FaceDetector.h  FeatureExtractor.cpp
tools/: YoloModelProbe.cpp
training/: README.md  requirements.txt
training/configs/: face.yaml
training/scripts/: check_gpu.py  convert_wider_to_yolo.py  create_face_yaml.py  export_onnx.py  split_custom_data.py  verify_labels.py
